assembler-migration/src/doc/grammar.txt
Program = [Title] Model [Stack] [Data] Code.

Title = "title" ident.

Model = ".model" ("small" | "compact" | "medium" | "large").

Stack = ".stack" number.

Data = ".data" {Variable}.
Variable = ident Size Value {"," Value}.
Size = "db" | "dw".
Value = number | string.

Code = ".code" {Procedure | Macro} {Label | Statement} "end" [ident].
Label = ident ":".
Procedure = ident "proc" ["far"] {Label | Statement} "ret" ident "endp".
Macro = ident "macro" {ident} {Statement} "endm".
Statement = OneArgStat | TwoArgStat.
OneArgStat = OneArgComm Argument
TwoArgStat = TwoArgStat Argument "," Argument
OneArgComm = "int" | "jmp" | "loop" |"push" | "pop" | "inc" ...
TwoArgComm = "mov" | "add" | "cmp" | "xor" ...
Argument = ident ["[" (Register | number) {(+ | -) (Register | number)} "]"] | number | Register | "@data" | "offset" ident
Register = "ax" | "bx" | "cx" | "dx" ...



	Overflow - postavlja se kada se javi prekoračenje kod aritmetičke operacije, tj. kada veličina rezultata premaši veličinu odredišta
	
	Sign - postavlja se kada je najviši bit rezultata 1. Odosno, S=0 za pozitivan rezultat i S=1 za negativan.
	
	Zero - postavlja se kada je rezultat jednak nuli.
	
	Carry Flag - postavlja se ako postoji prenos iz najvišeg bita rezultata, ili “pozajmica” u njega. Koristi se prilikom računanja sa vrednostima koje se prostiru na više reči.

